# mixedvoices

./: .coveragerc  .gitignore  .readthedocs.yaml  Dockerfile  Dockerfile.transcription  README.md  conftest.py  dev.sh  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  manage.py  prod.sh  pyproject.toml  requirements.txt  run_server.py  setup.py  start_db.py  test_db.py  usage.py  verify_db.py
dashboard/: Home.py  cli.py  config.py  main.py
dashboard/api/: client.py  endpoints.py
dashboard/components/: project_manager.py  recording_viewer.py  sidebar.py  upload_form.py
dashboard/pages/: 1_View_Flowchart.py  1_flow.py  2_View_Recordings.py  2_recordings.py  3_Upload_Recordings.py
dashboard/visualizations/: flow_chart.py  metrics.py
docs/source/: index.rst
enterprise/: db_manager.py  eval_agent.py  eval_case_generation.py  metric_analysis.py  prompt_fixes.py  todo.txt
examples/evaluation/: agent.py  create_project.py  evaluate.py
mixedvoices/: __init__.py  cli.py  config.py  constants.py  dashboard.py  db.py  metrics.py  models.py  project.py  recording.py  server.py  step.py  tasks.py  transcribe.py  utils.py  version.py
mixedvoices/core/: eval_prompt_run.py  project.py  recording.py  step.py  task_manager.py  utils.py  version.py
mixedvoices/dashboard/: Home.py  app.py  cli.py  config.py  utils.py
mixedvoices/evaluation/: base_agent.py  eval_agent.py  eval_case_generation.py  eval_generator.py  eval_prompt_generator.py  eval_run.py  evaluation_run.py  evaluator.py  metric_analysis.py  (+1 more)
tests/: test_core.py  test_full.py  test_server.py
tinkerers/: agent.py  evaluate.py
(+153 files in other folders)
