[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mixedvoices"
version = "0.1.0"
requires-python = ">=3.8"

dependencies = [
    "pydantic>=2.5.0",
    "openai>=1.51.0",
    "librosa>=0.10.0",
    "typer>=0.9.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-multipart>=0.0.6",
    "streamlit>=1.40.0",
    "plotly>=5.13.1",
    "streamlit-plotly-events>=0.0.6",
    "networkx>=3.0",
]

[project.scripts]
mixedvoices = "mixedvoices.cli:cli"

[tool.setuptools]
packages = ["mixedvoices"]