[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mixedvoices"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.5.0",
    "openai>=1.51.0",
    "librosa>=0.10.0",
    "typer>=0.9.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-multipart>=0.0.6",
    "streamlit>=1.40.0",
    "plotly>=5.13.1",
    "streamlit-plotly-events>=0.0.6",
    "networkx>=3.0",
]

[project.scripts]
mixedvoices = "mixedvoices.cli:cli"

[project.optional-dependencies]
dev = [
    "black>=23.12.0",
    "ruff>=0.1.9",
]

[tool.setuptools]
packages = ["mixedvoices"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "N",  # pep8-naming
    "W"   # pycodestyle warnings
]